[package]
name = "string_table"
version = "1.0.0"
edition = "2021"
description = "A rust crate for a speedy String-based HashMap."
authors = [ "realmofuz" ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
random-string = "1.0"

# This example benchmarks the `string_hash` function.
[[example]]
path = "examples/hash_benchmark.rs"
name = "hash_benchmark"

[[example]]
path = "examples/table_tester.rs"
name = "table_tester"
